RESOLVED FIXED281345
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-flex-basis-content-003a.html
https://bugs.webkit.org/show_bug.cgi?id=281345
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-flex-basis-...
alan
Reported 2024-10-11 14:32:46 PDT
ssia
Attachments
Patch (10.16 KB, patch)
2024-10-11 15:02 PDT, alan
no flags
[fast-cq]Patch (10.16 KB, patch)
2024-10-13 13:01 PDT, alan
no flags
alan
Comment 1 2024-10-11 15:02:59 PDT
alan
Comment 2 2024-10-13 13:01:47 PDT
Created attachment 472924 [details] [fast-cq]Patch
EWS
Comment 3 2024-10-13 15:10:00 PDT
Committed 285101@main (8dbda4a39253): <https://commits.webkit.org/285101@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472924 [details].
Radar WebKit Bug Importer
Comment 4 2024-10-13 15:11:14 PDT
Note You need to log in before you can comment on or make changes to this bug.