[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-flex-basis-content-003a.html https://bugs.webkit.org/show_bug.cgi?id=281345

Reviewed by Antti Koivisto.

LengthType::Content is not an intrinsic type (as opposed to min-content, max-content, fit-content).

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingContext.cpp:
(WebCore::Layout::FlexFormattingContext::convertFlexItemsToLogicalSpace):
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.cpp: use language closer to spec.
(WebCore::Layout::FlexFormattingUtils::usedMinimumMainSize const):
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::flexBaseAndHypotheticalMainSizeForFlexItems const):
(WebCore::Layout::FlexLayout::maxContentForFlexItem const): Deleted.
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.h:
* Source/WebCore/layout/integration/LayoutIntegrationUtils.cpp:
(WebCore::Layout::IntegrationUtils::maxContentSize const):
(WebCore::Layout::IntegrationUtils::minContentSize const):
(WebCore::Layout::IntegrationUtils::maxContentLogicalWidth const): Deleted.
(WebCore::Layout::IntegrationUtils::minContentLogicalWidth const): Deleted.
* Source/WebCore/layout/integration/LayoutIntegrationUtils.h:

Canonical link: https://commits.webkit.org/285101@main